force-app/main/default/objects/Case/fields/ALK_Accessories_Packaging__c.field-meta.xml
<CustomField>
    <fullName>ALK_Accessories_Packaging__c</fullName>
    <label>Accesorios y Empaques</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adaptador Corriente</fullName>
            </value>
            <value>
                <fullName>Audifonos</fullName>
            </value>
            <value>
                <fullName>Bases</fullName>
            </value>
            <value>
                <fullName>Bateria/Pilas</fullName>
            </value>
            <value>
                <fullName>Cable Poder</fullName>
            </value>
            <value>
                <fullName>Cable USB</fullName>
            </value>
            <value>
                <fullName>Cartuchos</fullName>
            </value>
            <value>
                <fullName>CD Driver</fullName>
            </value>
            <value>
                <fullName>Control Remoto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Paquetes Tornillos</fullName>
            </value>
            <value>
                <fullName>Teclado inalámbrico</fullName>
            </value>
            <value>
                <fullName>Toner</fullName>
            </value>
            <value>
                <fullName>USB Receptor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>