force-app/main/default/objects/Case/fields/ALK_Brand__c.field-meta.xml
<CustomField>
    <fullName>ALK_Brand__c</fullName>
    <formula>ALK_Factura__r.ALK_Brand__c</formula>
    <label>Marca</label>
    <type>Text</type>
</CustomField>