force-app/main/default/objects/Case/fields/ALK_Case_Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>ALK_Case_Reopen_Reason__c</fullName>
    <label>Motivo de Reapertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No esta deacuerdo con la respuesta</fullName>
            </value>
            <value>
                <fullName>Producto vuelve a presentar falla</fullName>
            </value>
            <value>
                <fullName>Caso mal cerrado</fullName>
            </value>
            <value>
                <fullName>Solicita la misma informacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>