force-app/main/default/objects/Case/fields/ALK_Cliente_Id_Approved__c.field-meta.xml
<CustomField>
    <fullName>ALK_Cliente_Id_Approved__c</fullName>
    <label>Identificación cliente aprobado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>