force-app/main/default/objects/Case/fields/ALK_Customer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Customer_ID_Number__c</fullName>
    <label>Número de Identificación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>