force-app/main/default/objects/Case/fields/ALK_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_City__c</fullName>
    <label>Ciudad del Entregador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>