force-app/main/default/objects/Case/fields/ALK_Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Name__c</fullName>
    <label>Nombre del Entregador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>