force-app/main/default/objects/Case/fields/ALK_Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delivery_Phone__c</fullName>
    <label>Celular del Entregador</label>
    <type>Phone</type>
</CustomField>