force-app/main/default/objects/Case/fields/ALK_Departament__c.field-meta.xml
<CustomField>
    <fullName>ALK_Departament__c</fullName>
    <label>Departamento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>