force-app/main/default/objects/Case/fields/ALK_Factura__c.field-meta.xml
<CustomField>
    <fullName>ALK_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>ALK_Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>