force-app/main/default/objects/Case/fields/ALK_Flag_SLA__c.field-meta.xml
<CustomField>
    <fullName>ALK_Flag_SLA__c</fullName>
    <formula>IMAGE(
				CASE( ALK_Traffic_Lights__c,
								&quot;Red&quot;, &quot;https://41k0st0--dev--c.documentforce.com/servlet/servlet.FileDownload?file=015010000005mNZ&quot;,
								&quot;Yellow&quot;, &quot;https://41k0st0--dev--c.documentforce.com/servlet/servlet.FileDownload?file=015010000005mNU&quot;,
								&quot;Green&quot;,&quot;https://41k0st0--dev--c.documentforce.com/servlet/servlet.FileDownload?file=015010000005mN5&quot;,
								&quot;https://41k0st0--dev--c.documentforce.com/servlet/servlet.FileDownload?file=015010000005mN5&quot;)
				     ,&quot;Traffic Light&quot;, 24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag SLA</label>
    <type>Text</type>
</CustomField>