force-app/main/default/objects/Case/fields/ALK_IMEI_2__c.field-meta.xml
<CustomField>
    <fullName>ALK_IMEI_2__c</fullName>
    <label>IMEI 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>