force-app/main/default/objects/Case/fields/ALK_INVOICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ALK_INVOICE_TYPE__c</fullName>
    <label>Tipo de Factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Despachos</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>