force-app/main/default/objects/Case/fields/ALK_Motivo__c.field-meta.xml
<CustomField>
    <fullName>ALK_Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Estado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente desiste</fullName>
            </value>
            <value>
                <fullName>Deteriorado</fullName>
            </value>
            <value>
                <fullName>Falla confirmad</fullName>
                <label>Falla confirmada</label>
            </value>
            <value>
                <fullName>Incompleto</fullName>
            </value>
            <value>
                <fullName>Proceso garantía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>