force-app/main/default/objects/Case/fields/ALK_Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>ALK_Problem_Description__c</fullName>
    <label>Descripción de la falla reportada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>