force-app/main/default/objects/Case/fields/ALK_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>ALK_Product_Status__c</fullName>
    <label>Estados del Producto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rayado</fullName>
            </value>
            <value>
                <fullName>Pelado</fullName>
            </value>
            <value>
                <fullName>Roto</fullName>
            </value>
            <value>
                <fullName>Golpeado</fullName>
            </value>
            <value>
                <fullName>Oxidado</fullName>
            </value>
            <value>
                <fullName>Sucio</fullName>
            </value>
            <value>
                <fullName>Partes Sueltas</fullName>
            </value>
            <value>
                <fullName>Pantalla Rota</fullName>
            </value>
            <value>
                <fullName>Fisurado</fullName>
            </value>
            <value>
                <fullName>Usado</fullName>
            </value>
            <value>
                <fullName>Normal - Usado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>