force-app/main/default/objects/Case/fields/ALK_RMA_Automatic__c.field-meta.xml
<CustomField>
    <fullName>ALK_RMA_Automatic__c</fullName>
    <label>RMA Automatico</label>
    <length>20</length>
    <type>Text</type>
</CustomField>