force-app/main/default/objects/Case/fields/ALK_RMA_Manual__c.field-meta.xml
<CustomField>
    <fullName>ALK_RMA_Manual__c</fullName>
    <label>RMA Manual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>