force-app/main/default/objects/Case/fields/ALK_Technical_Management__c.field-meta.xml
<CustomField>
    <fullName>ALK_Technical_Management__c</fullName>
    <label>Gestión Tecnico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>