force-app/main/default/objects/Case/fields/ALK_Traffic_Lights__c.field-meta.xml
<CustomField>
    <fullName>ALK_Traffic_Lights__c</fullName>
    <label>Traffic Lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>