force-app/main/default/objects/Case/fields/ALK_User_Creator__c.field-meta.xml
<CustomField>
    <fullName>ALK_User_Creator__c</fullName>
    <label>Usuario Creador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>