force-app/main/default/objects/Case/fields/Sub_Estado__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estado__c</fullName>
    <label>Sub-Estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Almacenado en tienda</fullName>
            </value>
            <value>
                <fullName>Carta enviada</fullName>
            </value>
            <value>
                <fullName>Carta no entregada</fullName>
            </value>
            <value>
                <fullName>Cliente no contactado</fullName>
            </value>
            <value>
                <fullName>Cliente no recibe</fullName>
            </value>
            <value>
                <fullName>Cliente no recoge</fullName>
            </value>
            <value>
                <fullName>Cte Contactado Pte Recogida</fullName>
            </value>
            <value>
                <fullName>Destrucción</fullName>
            </value>
            <value>
                <fullName>Entregado Cliente</fullName>
            </value>
            <value>
                <fullName>Enviado a CENTR</fullName>
            </value>
            <value>
                <fullName>Enviado a Cliente</fullName>
            </value>
            <value>
                <fullName>Recibido en CENTR</fullName>
            </value>
            <value>
                <fullName>Retornado a Tienda</fullName>
            </value>
            <value>
                <fullName>Pendiente envío a CENTR</fullName>
            </value>
            <value>
                <fullName>Caso SIC</fullName>
            </value>
            <value>
                <fullName>En espera de Respuesta</fullName>
            </value>
            <value>
                <fullName>Cliente Informado</fullName>
            </value>
            <value>
                <fullName>Alkosto</fullName>
            </value>
            <value>
                <fullName>Marca</fullName>
            </value>
            <value>
                <fullName>Producto Entregado</fullName>
            </value>
            <value>
                <fullName>Entregado Bono Cambio</fullName>
            </value>
            <value>
                <fullName>Entregado a Centro Servicio en Tienda</fullName>
            </value>
            <value>
                <fullName>Entregado a Centro Servicio en CENTR</fullName>
            </value>
            <value>
                <fullName>Recibo/Entrega - Falla</fullName>
            </value>
            <value>
                <fullName>Recibo/Entrega - Deteriorado/cosmetico</fullName>
            </value>
            <value>
                <fullName>Recibo/Entrega - Incompleto</fullName>
            </value>
            <value>
                <fullName>No Entregado</fullName>
            </value>
            <value>
                <fullName>Enviado a Tienda</fullName>
            </value>
            <value>
                <fullName>En CENTR de tienda</fullName>
            </value>
            <value>
                <fullName>En muelle CAS pte validacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>