force-app/main/default/objects/Case/recordTypes/ALK_FELICITACIONES.recordType-meta.xml
<RecordType>
    <fullName>ALK_FELICITACIONES</fullName>
    <active>true</active>
    <businessProcess>FELICITACIONES</businessProcess>
    <label>FELICITACIONES</label>
</RecordType>