force-app/main/default/objects/Case/recordTypes/ALK_INFORMACION.recordType-meta.xml
<RecordType>
    <fullName>ALK_INFORMACION</fullName>
    <active>true</active>
    <businessProcess>INFORMACIONES</businessProcess>
    <label>INFORMACIÓN</label>
</RecordType>