force-app/main/default/objects/Case/recordTypes/ALK_ODS.recordType-meta.xml
<RecordType>
    <fullName>ALK_ODS</fullName>
    <active>true</active>
    <businessProcess>ODS</businessProcess>
    <label>ODS</label>
</RecordType>