force-app/main/default/objects/Case/recordTypes/ALK_PAK.recordType-meta.xml
<RecordType>
    <fullName>ALK_PAK</fullName>
    <active>true</active>
    <businessProcess>PAK</businessProcess>
    <label>PAK</label>
</RecordType>