force-app/main/default/objects/Case/recordTypes/ALK_QUEJA.recordType-meta.xml
<RecordType>
    <fullName>ALK_QUEJA</fullName>
    <active>true</active>
    <businessProcess>Quejas</businessProcess>
    <label>QUEJA</label>
</RecordType>