force-app/main/default/objects/Case/recordTypes/ALK_SOLICITUD.recordType-meta.xml
<RecordType>
    <fullName>ALK_SOLICITUD</fullName>
    <active>true</active>
    <businessProcess>SOLICITUDES</businessProcess>
    <label>SOLICITUD</label>
</RecordType>