force-app/main/default/objects/Case/recordTypes/ALK_SUGERENCIAS.recordType-meta.xml
<RecordType>
    <fullName>ALK_SUGERENCIAS</fullName>
    <active>true</active>
    <businessProcess>SUGERENCIAS</businessProcess>
    <label>SUGERENCIAS</label>
</RecordType>