force-app/main/default/objects/Case/validationRules/ALK_Block_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>ALK_Block_Closed_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Not(ISNEW()),  Not(ISCHANGED(ALK_Pak_Batch_Status__c)), PRIORVALUE(ALK_Closed_Case__c) = true, ALK_Closed_Case__c = true, OR(
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>No se puede hacer cambios en un caso ya cerrado.</errorMessage>
</ValidationRule>