force-app/main/default/objects/Case/listViews/AK170_ODS.listView-meta.xml
<ListView>
    <fullName>AK170_ODS</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Almacenado en Tienda,Recepción Tienda,Cambio Aprobado,Disponible en Tienda</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ALK_ODS</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>TIENDAS</value>
    </filters>
    <filters>
        <field>ALK_Almacen__c</field>
        <operation>equals</operation>
        <value>ALKOSTO 170</value>
    </filters>
    <label>AK170 ODS</label>
    <sharedTo>
        <group>AK170_ODS</group>
    </sharedTo>
</ListView>